FIX: Overly long words in Flashcard-Text wrap instead of overflow

--- a/client/src/assets/InputBox.css
+++ b/client/src/assets/InputBox.css
@@ -65,6 +65,7 @@ body.darkmode .InputBox i{
   width: 100%;
 }
 .InputBox .length-status{
+  min-width: max-content;
   margin-bottom: 2px;
   opacity: 0;
   align-self: flex-end;
